fix/modify the user post
