# src/api/controllers/user/router.ts
@@ -4,6 +4,6 @@ import userController from './userController'
 export default express
   .Router()
   .post(
-    '/',
+    '',
     userController.createUser
   )
