# src/routes.ts
@@ -3,6 +3,6 @@ import generalController from './api/controllers/general/router'
 import userRouter from './api/controllers/user/router'
 
 export default function routes(app: Application): void {
-  app.use('/api/v1/user', userRouter)
-  app.use('/api/v1/healthcheck', generalController)
+  app.use('/api/v3/user', userRouter)
+  app.use('/api/v3/healthcheck', generalController)
 }
